# payment-example

./: .gitignore  Makefile  README.md  rust-toolchain
.github/workflows/: ci-casper-rust-contract.yml  nightly-scheduled-test.yml
contract/: Cargo.toml
contract/src/: collect.rs  constants.rs  deposit.rs  deposit_contract.rs  deposit_into.rs  deposit_into_session.rs  deposit_session.rs  escrow.rs  main.rs  payment_contract.rs  send_tokens.rs  wallet_contract.rs
tests/: Cargo.toml  build.rs
tests/src/: integration_tests.rs  lib.rs  utils.rs
