[package]
name = "escrow_contract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"

[[bin]]
name = "escrow"
path = "src/escrow.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "deposit"
path = "src/deposit.rs"
bench = false
doctest = false
test = false
