[package]
name = "deposit_contract"
version = "1.4.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"

[[bin]]
name = "deposit_contract"
path = "src/deposit_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "deposit_session"
path = "src/deposit_session.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "deposit_into_session"
path = "src/deposit_into_session.rs"
bench = false
doctest = false
test = false