[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { version = "1.4.0", default-features = false }
casper-types = { version = "1.4.0", default-features = false }
casper-engine-test-support = { version = "1.4.0", default-features = false }

[lib]
name = "lib"
path = "src/lib.rs"
bench = false
doctest = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]