[package]
name = "tests"
version = "1.4.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { version = "1.4.3", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "2.0.3", features = ["test-support"] }
casper-execution-engine = "1.4.4"
casper-types = "1.4.6"
rand = "0.8.5"

[lib]
name = "lib"
path = "src/lib.rs"
bench = false
doctest = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]