[package]
name = "tests"
version = "1.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { version = "=1.4.4", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "=2.1.0", features = ["test-support"] }
casper-execution-engine = "=1.5.0"
casper-types = "=1.5.0"
rand = "0.8.5"

[lib]
name = "lib"
path = "src/lib.rs"
bench = false
doctest = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-engine-test-support/test-support", "casper-contract/test-support"]